<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pillButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPillActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddPillActivity"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="16dp">

        <CheckBox
            android:id="@+id/pillThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="8dp"
            android:text="Thursday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pillWednesday" />

        <CheckBox
            android:id="@+id/pillTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="8dp"
            android:text="Tuesday"
            app:layout_constraintEnd_toStartOf="@+id/pillSaturday"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pillMonday" />

        <CheckBox
            android:id="@+id/pillSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="8dp"
            android:text="Sunday"
            app:layout_constraintStart_toEndOf="@+id/pillWednesday"
            app:layout_constraintTop_toBottomOf="@+id/pillSaturday" />

        <CheckBox
            android:id="@+id/pillFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="Friday"
            app:layout_constraintStart_toEndOf="@+id/pillMonday"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <EditText
            android:id="@+id/pillDosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Dosage (mg)"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pillAmount" />

        <Button
            android:id="@+id/pillTime"
            android:layout_width="208dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:width="300dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:onClick="selectTimePicker"
            android:text="Select Time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pillDosage" />

        <EditText
            android:id="@+id/pillAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Amount"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pillName" />

        <EditText
            android:id="@+id/pillName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Pill Name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/createPillButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="createPill"
            android:text="Create Pill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pillThursday" />

        <CheckBox
            android:id="@+id/pillMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="8dp"
            android:text="Monday"
            app:layout_constraintEnd_toStartOf="@+id/pillFriday"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <CheckBox
            android:id="@+id/pillSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="8dp"
            android:text="Saturday"
            app:layout_constraintStart_toEndOf="@+id/pillTuesday"
            app:layout_constraintTop_toBottomOf="@+id/pillFriday" />

        <CheckBox
            android:id="@+id/pillWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="8dp"
            android:text="Wednesday"
            app:layout_constraintEnd_toStartOf="@+id/pillSunday"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pillTuesday" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Select Days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pillTime" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>